# M3L

./: .gitignore  .pyproject.toml.~undo-tree~  .setup.py.~undo-tree~  LICENSE  default.nix  pyproject.toml  requirements.txt  setup.py  shell-pip.nix  shell.nix
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
.git-rewrite/t/: .gitignore
.git-rewrite/t/docs/: phase_diagram.puml
.git-rewrite/t/src/m3l/: molecular_dynamics.py  statistics.py  structure.py  utils.py
.git-rewrite/t/src/tests/: h2.xyz  md.ipynb  monte_carlo.ipynb  rdf.ipynb  system.ipynb  system_Ar.json  system_Ar2.json  system_Ar3.json  system_au.json  system_h2.json  system_new.json
.spyproject/config/: workspace.ini
doc/: phase_diagram.puml
docs/: phase_diagram.puml
m3l.egg-info/: PKG-INFO  SOURCES.txt
src/M3L.egg-info/: PKG-INFO  SOURCES.txt
src/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
src/fortran/: CMakeLists.txt  ensemble_module.f90  ff_module.f90  force_field_module.f90  fortran_module.f90  md_fortran.f90  structure_module.f90  thermodynamics_module.f90
src/fortran/cmake/: config.cmake
src/fortran/libs/: modulo_module.f90
src/libs/: CMakeLists.txt  md_fortran.f90
src/m3l/: __init__.py  dr_module.f90  dr_module.f95  force_field.py  forcefield.mod  machine_learning.py  machine_learning.py.old  main.py  main.py.old  molecular_dynamics.py  optimize.py  prepare.mod  settings.py  statistics.py  structure.py  symmetry.py  symmetry.py.old  utils.py  utils.py.old
src/m3l.egg-info/: PKG-INFO  SOURCES.txt
src/m3l/.ipynb_checkpoints/: modules-checkpoint.f95  prepare_module-checkpoint.f95  structure-checkpoint.py
src/m3l/system/: structure.py
src/notebooks/: Ar_100K_1000atm.json  C2H4.xyz  md.ipynb  md_opt.ipynb  simulation_mc.py  system.ipynb  system_new.json  teste.py  teste.xyz
src/notebooks/argon/: Ar_100K_1000atm.json  Ar_294K_1atm.json  Ar_94K_1atm.json  md.ipynb  md_opt.ipynb  md_time_series.ipynb  monte_carlo.ipynb  system2.json  system_new.json  system_teste.json
src/notebooks/contrib/: graphs.ipynb
src/notebooks/hydrogen/: md.ipynb  system_new.json  system_teste.json
src/teste.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: .Rhistory  Ar_gas.xyz  animacao.ipynb  ds.csv  ds.ods  h2.xyz  history.csv  md.ipynb  monte_carlo.ipynb  optimize.ipynb  rdf.ipynb  system.csv  system.ipynb  system.json  system.ods  system_10K.json  system_Ar.json  system_Ar_mc.json  system_Ar_md.json  system_Ar_opt.json  system_au.json  system_h2.json  system_new.json  system_new.json.old  system_new2.json  teste_forcefield.ipynb  teste_fortran.ipynb  teste_md.ipynb  teste_sistema.ipynb  thermodynamics.csv
src/tests/.ipynb_checkpoints/: teste_forcefield-checkpoint.ipynb  teste_fortran-checkpoint.ipynb  teste_sistema-checkpoint.ipynb
tests/: sistema.ipynb
tests/.ipynb_checkpoints/: sistema-checkpoint.ipynb
