[project]
name = "m3l"
version = "2023.05.dev0"
authors = [
  { name="Flaviano Williams Fernandes", email="flaviano.fernandes@ifpr.edu.br" },
]
description = "Machine Learning and Molecular Dynamics"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flavianowilliams/M3L"

[build-system]
requires = ["setuptools<60.0", "scipy", "build"]
build-backend = "setuptools.build_meta"
